# quark_bots

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
conf/: qbots.conf  security.conf
src/server/: CMakeLists.txt  abstractBot.h  main.cpp  order.cpp  order.h  quarkStream.cpp  quarkStream.h  trade.h
